--- a/project-functional.cabal
+++ b/project-functional.cabal
@@ -43,6 +43,8 @@ library
       src
   build-depends:
       base >=4.7 && <5
+    , mtl >=2.2.2 && <3
+    , random >=1.1 && <2
   default-language: Haskell2010
 
 executable project-functional-exe
@@ -54,10 +56,9 @@ executable project-functional-exe
   ghc-options: -threaded -rtsopts -with-rtsopts=-N
   build-depends:
       base >=4.7 && <5
-    , mtl
+    , mtl >=2.2.2 && <3
     , project-functional
-    , random
-    , time
+    , random >=1.1 && <2
   default-language: Haskell2010
 
 test-suite project-functional-test
@@ -71,4 +72,6 @@ test-suite project-functional-test
   build-depends:
       base >=4.7 && <5
     , project-functional
+    , mtl >=2.2.2 && <3
+    , random >=1.1 && <2
   default-language: Haskell2010
